--- a/TextMining/TextMiningLibrary/TextMiningLibrary.csproj
+++ b/TextMining/TextMiningLibrary/TextMiningLibrary.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="itext7" Version="7.1.16" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TextMiningExtensions\TextMiningExtensions.csproj" />
+  </ItemGroup>
+
 </Project>
